<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Speiseplan-Kamera</string>
    <string name="take_photo">Foto aufnehmen</string>
    <string name="photo_preview">Fotovorschau</string>
    <string name="confirm">Hochladen</string>
    <string name="retake">Neu aufnehmen</string>
    <string name="uploading">Foto wird hochgeladen…</string>
    <string name="upload_success">Foto erfolgreich hochgeladen!</string>
    <string name="upload_failed">Upload fehlgeschlagen: %1$s</string>
    <string name="capture_failed">Fotoaufnahme fehlgeschlagen: %1$s</string>
    <string name="permission_denied">Kameraberechtigung wird benötigt, um diese App zu nutzen.</string>
    <string name="camera_init_failed">Kamera konnte nicht initialisiert werden.</string>
    <string name="progress_text">%1$d%%</string>
</resources>
